grammar corrections in HTML and included media screen in CSS

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <header>
             <nav>
-            <div class="myname"></div>
+                <div class="myname"></div>
                 <h1 id="name">Nevah Evans</h1>
                     <ul>
                         <li><a href="#about-me">About Me</a></li>
@@ -31,11 +31,12 @@
         <main>
             <section class="ami">
             <h2 id="about-me">About Me</h2>
-                <p id="me"> Hello there! My name is Nevah Evans. I am a licensed physical therapist assistant, working in the home health setting. I am currently a bootcamp student learning full stack web develpement. I started with very little knowledge on how to code or how to even approach building a webpage. However, within this first month of the boot camp, I have learned so much thanks to my instructor and his TA's! I know there is so much more to learn but know my classmates and I will overcome the challenges ahead of us and see it through to the end! With the completion of this course I hope that I can come out with at least a <strong>little</strong> bit of sanity left and a new career!</p>
+                <p id="me"> Hello there! My name is Nevah Evans. I am a licensed physical therapist assistant, working in the home health setting. I am currently a bootcamp student learning full stack web develpement. I started with very little knowledge on how to code or how to even approach building a webpage. However, within this first month of the boot camp, I have learned so much, thanks to my instructor and his TA's! I know there is so much more to learn, but I know my classmates and I will overcome the challenges ahead of us and see it through to the end! With the completion of this course I hope that I can come out with at least a <strong>little</strong> bit of sanity left and a new career!</p>
             </section>
 <br>
-            <h2 id="work"> Work</h2>
+        
             <section id="projects">
+                <h2 id="work"> Work</h2>
                 <section class= container>
                     <article class=photo id="horiseon">
                          <a href="https://nevah-evans.github.io/Horiseon-Accessibility-Update/"><img src="./assets/images/orange_blue_tech.webp" alt="orange light tech" height="400px" width="620px"></a>
@@ -66,8 +67,9 @@
                 </section>
             </section>
 <br>
-            <h2 id="cm">Contact Me</h2>
-                <section id="contact-me">
+      
+            <section id="contact-me">
+                <h2 id="cm">Contact<p>Me</p></h2>
                     <div class="info">
                         <a href="tel:9794129477">(979) 412-9477</a>
                         <a href="mailto:nevahevans@yahoo.com">E-mail</a>
@@ -75,7 +77,7 @@
                         <a href="https://twitter.com/home">Twitter</a>
                         <a href="https://open.spotify.com/">Spotify</a>
                     </div>
-                </section>
+            </section>
         </main>
 
     </body>
