fixed background, maybe

--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
         </header>
 
         <main>
-            <figure>
-
-            </figure>
+<img id="figure-img" src="./assets/images/abstract-blue-orange-top.jpg"/>
             <p id="quote">This webpage has been brought to you by <em>redacted</em>mg of caffine and insomina. </p>
 
 
